...
  "feedFilterRejected": "Rejected",
  "feedEmptyAll": "No events available",
  "feedEmptyPending": "No events pending approval",
  "feedEmptyApproved": "No approved events",
  "feedEmptyRejected": "No rejected events",
  "feedEventManagement": "Event Management",
  "feedTitle": "Title",
  "feedLocation": "Location",
  "feedSGDate": "SG Date",
  "feedSGExternalLink": "SG External link",
  "feedCreateEvent": "Create an event",
  "feedUseExistingTicketing": "Use an existing ticketing",
  "feedUseExistingTicketingRequiresManageEventsPermission": "The \"Manage ticket events\" permission in MyEmpay is required to use this option.",
  "feedSelectTicketing": "Select a ticketing",
  "feedPleaseSelectTicketing": "Please select an existing ticketing",
  "feedNotification": "Send a notification",
  "feedPleaseSelectAnAssociation": "Please select an association",
  "feedReject": "Reject",
  "feedApprove": "Approve",
  "feedEnded": "Ended",
  "feedOngoing": "Ongoing",
  "feedFilter": "Filter",
  "feedAssociation": "Association",
...
  "feedNewsType": "News type",
  "feedNoAssociationEvents": "No association events",
  "feedApply": "Apply",
  "feedAdmin": "Administration",
  "feedCreateAnEvent": "Create an event",
  "feedManageRequests": "Manage requests",
  "feedNoNewsAvailable": "No news available",
  "feedRefresh": "Refresh",
  "retry": "Retry",
  "feedPleaseProvideASGExternalLink": "Please provide a SG external link",
  "feedPleaseProvideASGDate": "Please provide a SG date",
  "feedTicketsIn": "Opens {time}",
  "@feedTicketsIn": {
    "description": "Ticketing in time",
    "placeholders": {
      "time": {
        "type": "String"
...
  "eventActionEventButton": "Reserve",
  "eventActionCampaignValidated": "I voted!",
  "eventActionEventValidated": "I'm coming!",
  "moduleCentralassociation": "Centralassociation",
  "moduleCentralassociationDescription": "Aggregator of association links",
  "adminAccountTypes": "Account types",
  "adminAdd": "Add",
  "adminAddAssociation": "Add association",
  "adminAddedGroup": "Group created",
  "adminAddedLoaner": "Lender added",
  "adminAddedMember": "Member added",
  "adminAddedSchool": "School created",
  "adminAddedStructure": "Structure added",
...
  "adminDeleteGroupConfirmation": "Are you sure you want to delete this group?",
  "adminDeleteSchool": "Delete school?",
  "adminDeleteUsers": "Delete users",
  "adminDeleting": "Deleting",
  "adminDeletingError": "Error while deleting",
  "adminDescription": "Description",
  "adminEdit": "Edit",
  "adminEditAssociation": "Edit association : {associationName}",
  "@adminEditAssociation": {
    "description": "Edit association",
    "placeholders": {
      "associationName": {
        "type": "String"
...
  "adminEditStructure": "Edit structure",
  "adminEmailFailed": "Unable to send email to the following addresses",
  "adminEmailRegex": "Email Regex",
  "adminEmptyDate": "Empty date",
  "adminEmptyFieldError": "Name cannot be empty",
  "adminEmptyUser": "Empty user",
  "adminEndDate": "End date",
  "adminEndDateMaximal": "Maximum end date",
  "adminEndDateMinimal": "Minimum end date",
  "adminError": "Error",
  "adminFailedToDeleteGroup": "Failed to delete group",
  "adminFailedToInviteUsers": "Failed to invite users",
  "adminFailedToSendNotification": "Failed to send notification",
...
  "adminMembers": "Members",
  "adminMembershipAddingError": "Error while adding (likely due to overlapping dates)",
  "adminMemberships": "Memberships",
  "adminMembershipUpdatingError": "Error while updating (likely due to overlapping dates)",
  "adminMinimum": "Minimum",
  "adminModifyPermissions": "Modify permissions",
  "adminName": "Name",
  "adminNoGroup": "No group",
  "adminNoManager": "No manager selected",
  "adminNoMember": "No member",
  "adminNoMembership": "No membership",
  "adminNoMoreLoaner": "No lender available",
  "adminNoSchool": "No school",
...
  "adminSendNotificationToGroup": "Send notification to group",
  "adminShortId": "Short ID (3 letters)",
  "adminShortIdError": "Short ID must be 3 characters",
  "adminSiegeAddress": "Head office address",
  "adminSiret": "SIRET",
  "adminSiretError": "SIRET must be 14 digits",
  "adminStartDate": "Start date",
  "adminStartDateMaximal": "Maximum start date",
  "adminStartDateMinimal": "Minimum start date",
  "adminStreet": "Street and number",
  "adminStructures": "Structures",
  "adminTitle": "Title",
  "adminTooHeavyLogo": "Logo too heavy, maximum size is 4MB",
...
  "bookingWeekDayThu": "Thursday",
  "bookingWeekDayTue": "Tuesday",
  "bookingWeekDayWed": "Wednesday",
  "bookingWeeks": "Weeks",
  "bookingYes": "Yes",
  "cinemaAdd": "Add",
  "cinemaAddedSession": "Session added",
  "cinemaAddingError": "Error while adding",
  "cinemaAddSession": "Add a session",
  "cinemaCinema": "Cinema",
  "cinemaDeleteSession": "Delete the session?",
  "cinemaDeleting": "Deleting",
  "cinemaDuration": "Duration",
  "cinemaEdit": "Edit",
  "cinemaEditedSession": "Session edited",
  "cinemaEditingError": "Error while editing",
  "cinemaEditSession": "Edit the session",
  "cinemaEmptyUrl": "Please enter a URL",
  "cinemaGenre": "Genre",
  "cinemaImportFromTMDB": "Import from TMDB",
  "cinemaIncomingSession": "Now showing",
  "cinemaIncorrectOrMissingFields": "Incorrect or missing fields",
  "cinemaInvalidUrl": "Invalid URL",
...
  "cinemaNoDuration": "Please enter a duration",
  "cinemaNoOverview": "No synopsis",
  "cinemaNoPoster": "No poster",
  "cinemaNoSession": "No session",
  "cinemaOverview": "Synopsis",
  "cinemaPosterUrl": "Poster URL",
  "cinemaSessionDate": "Session day",
  "cinemaStartHour": "Start hour",
  "cinemaTagline": "Tagline",
  "cinemaThe": "The",
  "drawerAdmin": "Administration",
  "drawerAndroidAppLink": "https://play.google.com/store/apps/details?id=fr.myecl.titan",
  "drawerCopied": "Copied!",
...
  "drawerIosAppLink": "https://apps.apple.com/fr/app/myecl/id6444443430",
  "drawerLoginOut": "Do you want to log out?",
  "drawerLogOut": "Log out",
  "drawerOr": " or ",
  "drawerSettings": "Settings",
  "eventAdd": "Add",
  "eventAddedEvent": "Event added",
  "eventAddEvent": "Add an event",
  "eventAddingError": "Error while adding",
  "eventAllDay": "All day",
  "eventConfirm": "Confirm",
  "eventConfirmation": "Confirmation",
  "eventConfirmed": "Confirmed",
...
  "eventEventList": "Event list",
  "eventEventType": "Event type",
  "eventEvery": "Every",
  "eventHistory": "History",
  "eventIncorrectOrMissingFields": "Some fields are incorrect or missing",
  "eventInterval": "Interval",
  "eventInvalidDates": "End date must be after start date",
  "eventInvalidIntervalError": "Please enter a valid interval",
  "eventLocation": "Location",
  "eventModifiedEvent": "Event modified",
  "eventModifyingError": "Error while modifying",
  "eventMyEvents": "My events",
  "eventName": "Name",
...
  "seedLibraryNoFilteredPlants": "No plants match your search. Try other filters.",
  "seedLibraryNoMorePlant": "No plants available",
  "seedLibraryNoPersonalPlants": "You don't have any plants yet in your seed library. You can add some in the stocks.",
  "seedLibraryNoSpecies": "No species found",
  "seedLibraryNoStockPlants": "No plants available in stock",
  "seedLibraryNotes": "Notes",
  "seedLibraryOk": "OK",
  "seedLibraryPlantationPeriod": "Planting period:",
  "seedLibraryPlantationType": "Plantation type:",
  "seedLibraryPlantDetail": "Plant details",
  "seedLibraryPlantingDate": "Planting date",
  "seedLibraryPlantingNow": "I'm planting it now",
  "seedLibraryPrefix": "Prefix",
...
